@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-2167: Return correctly spelled ressort names to app wrapper
 
+- ZON-2285: Identify if view is wrapped via user agent
+
 
 2.18 (2015-10-26)
 -----------------
